# UGC_service

./: .env.example  .gitignore  README.md  docker-compose-auth-tests.yml  docker-compose-auth.override.yml  docker-compose-auth.yml  docker-compose-django.yml  docker-compose-kafka.yml  docker-compose-movies-test.yml  docker-compose-movies.yml  docker-compose-research.yml  docker-compose-ugc-tests.yml  docker-compose-ugc.override.yml  docker-compose-ugc.yml  docker-compose-ugc_local.yml  pyproject.toml
auth-service/fastapi-auth/: main.py
auth-service/fastapi-auth/core/: exceptions.py  logger.py
auth-service/fastapi-auth/models/: common.py  token.py
auth-service/fastapi-auth/schemas/: role_schema.py  user_schema.py
auth-service/fastapi-auth/services/: cache.py  token_service.py  user_service.py  utils.py
auth-service/tests-auth/functional/: settings.py
auth-service/tests-auth/functional/auth-service/: test_user_role_add.py  test_user_role_remove.py  test_users_signup.py
auth-service/tests-auth/functional/fixtures/: users_fixt.py
auth-service/tests-auth/functional/test_data/: users_data.py
django/app/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  pyproject_docker.toml
django/app/config/: config_django.py  settings.py  urls.py
django/app/config/components/: database.py  installed_apps.py  templates.py
django/app/movies/: admin.py  apps.py  constants.py  models.py
django/app/movies/api/: urls.py
django/app/movies/api/v1/: urls.py  views.py
django/app/movies/locale/en/LC_MESSAGES/: django.po
django/app/movies/locale/ru/LC_MESSAGES/: django.po
django/app/users/: admin.py  apps.py  auth.py  models.py
django/app/uwsgi/: uwsgi.ini
django/nginx/conf.d/: default.conf
movies/fastapi-movies/: pyproject.toml
movies/fastapi-movies/core/: config.py  enum.py  service.py
movies/fastapi-movies/services/: token.py
movies/sqlite_to_postgres/: models.py
movies/sqlite_to_postgres/tests/: check_consistency.py
movies/tests-movies/functional/: settings.py
movies/tests-movies/functional/fastapi/: test_film.py
ugc-service/: architecture.wsd
ugc-service/clickhouse-vertica/: Dockerfile  README.md  clickhouse.py  docker-compose-research.yml  main.py  pyproject.toml  try.py  vertica.py
ugc-service/data/node1/: node1.sql
ugc-service/data/node2/: node2.sql
ugc-service/data/node3/: node3.sql
ugc-service/data/node4/: node4.sql
ugc-service/etl-ugc/: Dockerfile  clickhouse_loader.py  kafka_extractor.py  main.py  models.py  pyproject.toml  queries.py  requirements.txt  transformer.py
ugc-service/etl-ugc/core/: config.py  logger.py
ugc-service/fastapi-ugc/: Dockerfile  init.sh  main.py  pyproject.toml
ugc-service/fastapi-ugc/api/v1/: like.py  review.py  stats.py
ugc-service/fastapi-ugc/core/: config.py  exceptions.py  logger.py
ugc-service/fastapi-ugc/db/: kafka.py  postgres.py
ugc-service/fastapi-ugc/migrations/: env.py
ugc-service/fastapi-ugc/migrations/versions/: 1f29ba7b1121_review.py  e875680d71f6_initial.py
ugc-service/fastapi-ugc/models/: common.py  mixins.py
ugc-service/fastapi-ugc/schemas/: like_schema.py  mixins.py  review_schema.py  stats_schema.py  token_schema.py
ugc-service/fastapi-ugc/services/: broker_service.py  db_service.py  like_service.py  review_service.py  stats_service.py  token_service.py
ugc-service/nginx/conf.d/: default.conf
ugc-service/tests-ugc/: Dockerfile  conftest.py  pyproject.toml
ugc-service/tests-ugc/functional/: settings.py  utils.py
ugc-service/tests-ugc/functional/auth-service/: test_roles_crud.py
ugc-service/tests-ugc/functional/fixtures/: base_fixt.py  postgres_fixt.py  review_fixt.py  roles_fixt.py  stats_fixt.py  token_fixt.py  tokens_fixt.py  user_role_fixt.py
ugc-service/tests-ugc/functional/test_data/: film_data.py  review_data.py
ugc-service/tests-ugc/functional/ugc-service/: test_reviews.py  test_stats_create.py
