[tool.poetry]
name = "UGC-service"
version = "0.1.0"
description = "First UGC-service sprint"
authors = ["Борис Гельруд <agu-66@mail.ru>", "Холкин Сергей <>"]
license = "open"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
