[tool.poetry]
name = "vertica-test"
version = "0.1.0"
description = "First UGC-service sprint"
authors = ["Борис Гельруд <agu-66@mail.ru>", "Косянов Никита <>", "Холкин Сергей <>"]
license = "open"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
vertica-python = "^1.3.8"
clickhouse-driver = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
